<resources>
    <string name="app_name">PI</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Insira o nome de usuario</string>
    <string name="prompt_email">Insira o seu e-mail</string>
    <string name="prompt_password">Insira a senha</string>
    <string name="repassword">Confirme a senha</string>
    <string name="action_sign_in">FAZER LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="criar_conta">CRIAR UMA CONTA</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="agenda">PROJECT NET</string>
    <string name="bem_vindo_ao_nosso_app">Bem Vindo ao nosso App</string>
    <string name="title_activity_login_creation">LoginCreation</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>